samples/_failures_safe/1761725683_97f5ae_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b6aeb27e.c: In function ‘main’:
./samples/SAFE/__tmp_b6aeb27e.c:149:23: error: ‘decomp’ undeclared (first use in this function)
  149 |     print_buffer_hex(&decomp
      |                       ^~~~~~
./samples/SAFE/__tmp_b6aeb27e.c:149:23: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b6aeb27e.c:149:29: error: expected ‘)’ at end of input
  149 |     print_buffer_hex(&decomp
      |                     ~       ^
      |                             )
./samples/SAFE/__tmp_b6aeb27e.c:149:5: error: expected declaration or statement at end of input
  149 |     print_buffer_hex(&decomp
      |     ^~~~~~~~~~~~~~~~
